--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,53 @@
-# Ignore configuration files that may contain sensitive information.
-sites/*/*settings*.php
+# Ignore configuration files that may contain sensitive information #
+#####################################################################
+public_html/sites/*/*settings*.php
+public_html/sites/*/settings.php
+public_html/sites/default/settings.php
+public_html/sites/default/tmp
 
-# Ignore paths that contain generated content.
-files/
-sites/*/files
-sites/*/private
+# Ignore paths that contain generated content #
+###############################################
+public_html/stats/
+public_html/cache/
+public_html/files/
+public_html/sites/*/files
+public_html/sites/*/private
+public_html/sites/*/temp
+public_html/sites/*/tmp/
+private
+private-files
+temp
+tmp-files
 
-# Ignore default text files
-robots.txt
-/CHANGELOG.txt
-/COPYRIGHT.txt
-/INSTALL*.txt
-/LICENSE.txt
-/MAINTAINERS.txt
-/UPGRADE.txt
-/README.txt
-sites/all/README.txt
-sites/all/modules/README.txt
-sites/all/themes/README.txt
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
 
-# Ignore everything but the "sites" folder ( for non core developer )
-.htaccess
-web.config
-authorize.php
-cron.php
-index.php
-install.php
-update.php
-xmlrpc.php
-/includes
-/misc
-/modules
-/profiles
-/scripts
-/themes
-/nbproject/private/
+# Packages #
+############
+# It's better to unpack these files and commit the raw source, git has its own
+# built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
 
-# OS / IDE generated files #
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
 ######################
 .DS_Store*
 ehthumbs.db
@@ -53,10 +64,7 @@ nbproject
 .sass-cache
 .sass-cache/*
 ._*
+public_html/sites/default/tmp/.htaccess
 *.sublime-project
 *.sublime-workspace
 *.idea
-
-.AppleDB
-.AppleDesktop
-Network Trash Folder
